--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             #poem {
                 background: rgb(78,205,196);
                 float: right;
-                width: 30%
-                margin: 8px;
+                width: 25%;
+                margin: 5px;
             }
         </style>
     </head>
