--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 float: right;
                 width: 25%;
                 margin: 10px;
+                padding: 10px;
             }
         </style>
     </head>
