--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 background: rgb(78,205,196);
                 float: right;
                 width: 25%;
-                margin: 10px;
+                margin: auto;
                 padding: 10px;
             }
         </style>
