--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 font-family: sans-serif;
             }
             h1 {
-                font-family: fantasy;
+                font-family: serif;
             }
             #reflection {
                 width: 200px;
