--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
         <h2>Science</h2>
     
-  <iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  <iframe style="position: relative; width: 20%; height: auto; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEVPb0gsgI&#x2F;view?embed">
   </iframe>
 
