--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 All we must do is reflect it<br>
                 so it shines throughout the sphere</p>
         </div>
-   
+   <img src="https://github.com/zacjove/zacjove.github.io/blob/71c08bdfde860cb771401f773abd36212e85e668/5G%20safety%20infographic.png">
         
         <h2>Kontemporaryong Isyu</h2>
         
