--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 All we must do is reflect it<br>
                 so it shines throughout the sphere</p>
         </div>
-   <img src="5G safety infographic.png">
+   <img src="https://www.canva.com/design/DAEVPb0gsgI/2RiufX3NFknl3PwsrhdUYg/watch?utm_content=DAEVPb0gsgI&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">
         
         <h2>Kontemporaryong Isyu</h2>
         
