--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 border: 10px ridge brown;
             }
             #container {
-                width: 600px;
+                width: 80%;
                 margin: auto;
                    
             }
