--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h1>Portfolio review grade 10 2nd quarter</h1>
       
         <div id="poem">
+            <h2>English</h2>
             <h5>God's mirror</h5>
             <p> we can reflect Jesus<br>
                 mirror his love and care<br>
