--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             }
             h2 {
                 font-family: serif;
+                font-size:24px
             }
             #poem {
                 background: silver;
