--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                    
             }
             .capannoripic {
-                width: 30%
+                max-width: 30%
             }
        
         </style>
