--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                    
             }
             .capannoripic {
-                max-width: 30%
+                max-width: 30%;
+                min-with: 300px
             }
        
         </style>
