--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
             .capannoripic {
                 max-width: 30%;
-                min-with: 300px
+                min-width: 300px
             }
        
         </style>
