--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                    
             }
             .capannoripic {
-                max-width: 30%;
-                min-width: 300px
+                width: 300px
             }
        
         </style>
