--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 padding: 10px;
                 border: 10px ridge brown;
             }
+            #poem p {
+                font-size: large;
+            }
             #container {
                 width: 80%;
                 margin: auto;
