--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 font-size:30px
             }
             #poem {
-                width: 40%
+                width: 40%;
                 background: silver;
                 float: right;
                 margin: auto;
