--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             }
             .isyu p {
                 text-indent: 2em;
+            .isyu {
+                width: 40%;
+                float: right;
             }
             .math {
                 width: 50%;
