--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 text-indent: 2em;
             .isyu {
                 width: 40%;
-                float: right;
+                float: left;
+                margin: auto;
+                padding: 10px;
             }
             .math {
                 width: 50%;
