--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             }
             #poem p {
                 font-size: large;
+                text-align: center;
             }
             #container {
                 width: 80%;
