--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
              #isyu {
                 width: 40%;
                 margin: auto;
+                 float: left;
             }
              #isyu p {
                 text-indent: 2em;
@@ -40,19 +41,6 @@
         <body>
             <div id="container">
                 <h1>Portfolio review grade 10 2nd quarter</h1>
-      
-                    <div id="isyu">
-                        <h2>Kontemporaryong Isyu</h2>
-                            <img class=capannoripic src=https://upload.wikimedia.org/wikipedia/commons/9/9f/Castelvecchio_Alto_-_panoramio.jpg>
-                                <p> Ang Pilipinas ay pangatlo sa pinakamalaking kontributor ng mga plastik na basura sa karagatan sa buong mundo. Isang dahilan dito ay ang kahirapang makahanap ng paraan ng tamang pagtatapon ng basura ng mga nakatira sa bukid at ang mga squatter. Pero marami pa rin pwedeng gawin, lalo na ang mga mas may-kaya, para magkaroon ng malasakit sa kapaligiran na hindi madalas nakikita. </p>
-                                <p>Upang lahat ay makapagtapon ng tama ng basura nila, kailangan magbigay ang gobyerno ng programa sa lahat ng mamamayan, ng tamang paraan ng pagtatapon ng basura. Kailangan sila gumawa ng paraan na kahit yung squatter at  mga nakatira sa bukid ay maitapon ng tama ang basura nila. Kapag walang tamang paraan ang mga tao, lalo na ang mga squatter, sa pagtatapon ng basura , itatapon na lang nila kung saan saan ito at patuloy na lalala ang polusyon ng basura sa ating kapaligiran. </p>
-                                <p>Pangalawa, kailangan nilang magtayo ng separated waste stream collection ng nabubulok, narerecycle, at lahat ng ibang basura. pwede din silang maghikayat sa mga tao para i-segregate ang mga basura nila sa pamamagitang ng pagpapatupad ng pay-as-you-throw na programa. </p>
-                                <p>Isang lungsod na nagawa ang mga ito ay ang Capannori, Italiya. Sa Capannori, pagkatapos ng sampung taon ng pagpapatupad ng mga zero waste na programa, ay nakapagbawas sila ng 40% sa basura nila, nakakuha ng separation rate na 82%,  nakapagbawas ng residual waste ng 57%, nakapagbawas ng waste tariffs ng 20%, at may naibigay na 93 tons na mga gamit na hindi kailangang itapon, sa reuse center para pwede pang magagamit ng iba. Naniniwala ako na pwede din natin gawin ito sa Pilipinas, kailangan lang ng pagsisikap at kooperasyon ng lahat, at kailangan na maging seryoso ang gobyerno dito.</p>
-                                <p>Bilang mamamayan ng Pilipinas, lahat tayo ay meron ding responsibilidad sa pag-aalaga ng mundo natin. dapat tayo magkaroon ng pagmamalasakit sa kapaligiran natin. isang paraan para gawin ito ay ang paggamit ng mga reusable na gamit para maiwasan gumawa ng basura. Isa pang kailangan gawin natin ay itapon ng tama ang basura natin. Pwede din tayo mamili sa palengke para walang package waste ang pagkain na binibili natin. </p>
-                                <p>Isa pang pwede natin gawin bilang mamamayan, ay ang paglilinis ng ating kapaligiran. Kapag may nakita kang basura na pakalat-kalat, pulutin mo. Pwede din mag-organize ng community cleanup o sumali sa isa na na-organize na. Ang community cleanup ay kung saan sumasama ang isang grupo ng tao para linisin o pagandahin ang isang lugar. Ang community cleanup ay magandang paraan upang alagaan ang kapaligiran at ipalaganap ang malasakit sa bayan sa komunidad mo. </p>
-                                <p>Kahit minsan ramdam natin na wala nang pag-asa ang problema ng basura sa bansa natin, alam ko na pwede itong magbago. Kailangan lang unahin ng gobyerno at gawin natin ang bahagi natin, at magagawa nating mas maganda ang Pilipinas. </p>
-                    </div>
-            
                     <div id="poem">
                         <h2>English</h2>
                             <h5>God's mirror</h5>
@@ -86,6 +74,17 @@
                         </div>
                         <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEYUbGAS1U&#x2F;view?utm_content=DAEYUbGAS1U&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Polynomials In Real Life</a> by Zac
                    </div>
+                <div id="isyu">
+                        <h2>Kontemporaryong Isyu</h2>
+                            <img class=capannoripic src=https://upload.wikimedia.org/wikipedia/commons/9/9f/Castelvecchio_Alto_-_panoramio.jpg>
+                                <p> Ang Pilipinas ay pangatlo sa pinakamalaking kontributor ng mga plastik na basura sa karagatan sa buong mundo. Isang dahilan dito ay ang kahirapang makahanap ng paraan ng tamang pagtatapon ng basura ng mga nakatira sa bukid at ang mga squatter. Pero marami pa rin pwedeng gawin, lalo na ang mga mas may-kaya, para magkaroon ng malasakit sa kapaligiran na hindi madalas nakikita. </p>
+                                <p>Upang lahat ay makapagtapon ng tama ng basura nila, kailangan magbigay ang gobyerno ng programa sa lahat ng mamamayan, ng tamang paraan ng pagtatapon ng basura. Kailangan sila gumawa ng paraan na kahit yung squatter at  mga nakatira sa bukid ay maitapon ng tama ang basura nila. Kapag walang tamang paraan ang mga tao, lalo na ang mga squatter, sa pagtatapon ng basura , itatapon na lang nila kung saan saan ito at patuloy na lalala ang polusyon ng basura sa ating kapaligiran. </p>
+                                <p>Pangalawa, kailangan nilang magtayo ng separated waste stream collection ng nabubulok, narerecycle, at lahat ng ibang basura. pwede din silang maghikayat sa mga tao para i-segregate ang mga basura nila sa pamamagitang ng pagpapatupad ng pay-as-you-throw na programa. </p>
+                                <p>Isang lungsod na nagawa ang mga ito ay ang Capannori, Italiya. Sa Capannori, pagkatapos ng sampung taon ng pagpapatupad ng mga zero waste na programa, ay nakapagbawas sila ng 40% sa basura nila, nakakuha ng separation rate na 82%,  nakapagbawas ng residual waste ng 57%, nakapagbawas ng waste tariffs ng 20%, at may naibigay na 93 tons na mga gamit na hindi kailangang itapon, sa reuse center para pwede pang magagamit ng iba. Naniniwala ako na pwede din natin gawin ito sa Pilipinas, kailangan lang ng pagsisikap at kooperasyon ng lahat, at kailangan na maging seryoso ang gobyerno dito.</p>
+                                <p>Bilang mamamayan ng Pilipinas, lahat tayo ay meron ding responsibilidad sa pag-aalaga ng mundo natin. dapat tayo magkaroon ng pagmamalasakit sa kapaligiran natin. isang paraan para gawin ito ay ang paggamit ng mga reusable na gamit para maiwasan gumawa ng basura. Isa pang kailangan gawin natin ay itapon ng tama ang basura natin. Pwede din tayo mamili sa palengke para walang package waste ang pagkain na binibili natin. </p>
+                                <p>Isa pang pwede natin gawin bilang mamamayan, ay ang paglilinis ng ating kapaligiran. Kapag may nakita kang basura na pakalat-kalat, pulutin mo. Pwede din mag-organize ng community cleanup o sumali sa isa na na-organize na. Ang community cleanup ay kung saan sumasama ang isang grupo ng tao para linisin o pagandahin ang isang lugar. Ang community cleanup ay magandang paraan upang alagaan ang kapaligiran at ipalaganap ang malasakit sa bayan sa komunidad mo. </p>
+                                <p>Kahit minsan ramdam natin na wala nang pag-asa ang problema ng basura sa bansa natin, alam ko na pwede itong magbago. Kailangan lang unahin ng gobyerno at gawin natin ang bahagi natin, at magagawa nating mas maganda ang Pilipinas. </p>
+                    </div>
             </div>
     </body>
 </html>
