--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 font-size: large;
                 text-align: center;
             }
+            #poem h3 {
+                text-align: center
+            }
+            #poem h2 {
+                text-alighn: center
+            }
              #isyu {
                 width: 40%;
                 margin: auto;
