--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
                     <div id="poem">
                         <h2>English</h2>
                             <h2>God's mirror</h2>
-                            <p> we can reflect Jesus<br>
-                                mirror his love and care<br>
+                            <p> We can reflect Jesus<br>
+                                Mirror his love and care<br>
                                 So that when others see us<br>
-                                our savior will be there</p>
+                                Our Savior will be there.</p>
 
-                            <p>for if we love the widow<br>
-                                and care for those in need<br>
-                                we show them our savior<br>
-                                through our every deed</p>
+                            <p>For if we love the widow<br>
+                                And care for those in need<br>
+                                We show them our Savior<br>
+                                Through our every deed.</p>
 
                             <p>Our job is very simple<br>
                                 His love so very clear<br>
                                 All we must do is reflect it<br>
-                                so it shines throughout the sphere</p>
+                                So it shines throughout the sphere.</p>
                     </div>
                     <div id="science">
                         <h2>Science</h2>
