--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 text-align: center
             }
             #poem h2 {
-                text-alighn: center
+                text-align: center
             }
              #isyu {
                 width: 40%;
