--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             #math {
 
             }
+            #values {
+                width: 40%;
+                float: right;
+                }
         </style>
     </head>
         <body>
@@ -91,6 +95,18 @@
                                 <p>Isa pang pwede natin gawin bilang mamamayan, ay ang paglilinis ng ating kapaligiran. Kapag may nakita kang basura na pakalat-kalat, pulutin mo. Pwede din mag-organize ng community cleanup o sumali sa isa na na-organize na. Ang community cleanup ay kung saan sumasama ang isang grupo ng tao para linisin o pagandahin ang isang lugar. Ang community cleanup ay magandang paraan upang alagaan ang kapaligiran at ipalaganap ang malasakit sa bayan sa komunidad mo. </p>
                                 <p>Kahit minsan ramdam natin na wala nang pag-asa ang problema ng basura sa bansa natin, alam ko na pwede itong magbago. Kailangan lang unahin ng gobyerno at gawin natin ang bahagi natin, at magagawa nating mas maganda ang Pilipinas. </p>
                     </div>
+                <div id="values">
+                    <h3>Prioritize God first.</h3>
+                    <p>Matthew 6:33 says "But seek first the kingdom of God and his righteousness, and all these things will be added to you." 
+                        God wants us to put Him first above everything. If we really want to succeed in life God needs to be our first -- and only -- priority.</p>
+                    <h3>Prioritize Family second.</h3>
+                    <p>1 Timothy 3:1,4-5 says "The saying is trustworthy: If anyone aspires to the office of overseer, he desires a noble task. 
+                         He must manage his own household well, with all dignity keeping his children submissive, 
+                         for if someone does not know how to manage his own household, how will he care for God's church?" 
+                         God puts high importance on family. Our family, our spose, children, and parents, should be our top priority after God.</p>
+                    <h3>Prioritize work/school third.</h3>
+                    <p>2 Thessalonians 3:10 says "For even when we were with you, we would give you this command: If anyone is not willing to work, let him not eat." 
+                        God values work, and if we want to provide for our family, work is important. As kids, our parents expect us to prioritize our school.</p>
             </div>
     </body>
 </html>
