--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             }
             #values {
-                width: 40%;
+                width: 30%;
                 float: right;
                 }
         </style>
@@ -96,6 +96,7 @@
                                 <p>Kahit minsan ramdam natin na wala nang pag-asa ang problema ng basura sa bansa natin, alam ko na pwede itong magbago. Kailangan lang unahin ng gobyerno at gawin natin ang bahagi natin, at magagawa nating mas maganda ang Pilipinas. </p>
                     </div>
                 <div id="values">
+                    <h2>Values</h2>
                     <h3>Prioritize God first.</h3>
                     <p>Matthew 6:33 says "But seek first the kingdom of God and his righteousness, and all these things will be added to you." 
                         God wants us to put Him first above everything. If we really want to succeed in life God needs to be our first -- and only -- priority.</p>
@@ -107,6 +108,7 @@
                     <h3>Prioritize work/school third.</h3>
                     <p>2 Thessalonians 3:10 says "For even when we were with you, we would give you this command: If anyone is not willing to work, let him not eat." 
                         God values work, and if we want to provide for our family, work is important. As kids, our parents expect us to prioritize our school.</p>
+                </div>
             </div>
     </body>
 </html>
