--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 margin: auto;
                 padding: 10px;
                 }
+            #science {
+                width: 300px;
              #isyu {
                 width: 40%;
                 margin: auto;
@@ -68,7 +70,7 @@
                                 So it shines throughout the sphere.</p>     
                     </div>
                   
-                        <h2>Science</h2>
+                        <h2 id="scince">Science</h2>
                             <img src=https://lh3.googleusercontent.com/3ZKF4Dc5L51FanB4uHDRB6tn2tF2_stmuyB2Ru8J-tE443Hza21CNW5OI054R9eBaFNfxEkS-j7Jdk6FYdP5NV-JAfsjzxJEySxoI9tRah7_LNZCcHvqPAODWzMU5wSLR4TAFpWtWl1vERIkVwV5C2SvISPuepkX-liujC53spgh11tA5X8mOm6GKhvPmgWb7j1QlJL9w3RzL2kx5-NnXnBjYzyrghzA28BjSduGuRVFLv0zXfXO6CrCHiJ3-V8SOjEKSH9MhhYDrJ3z4DJVW0hBGmgXcDSSoDWHpF_PL5l47oPWxnMobzktS0DRoSWj8_oelxpKQS0A848KDjw_3dS5x5RnfMAY7iTPVx0P_9GhsqttJ8PryAJ4F1bRU3w_8O2MZTsxtjaWwk_aP03smQ3WaNPAbMHVKii4DaMzG2HJtzh7f0XAn-lhy8SsK2dzSptGQ4QcHIfteNVOJoQ8W5AYuzVG6n6DGPoqIIs2GpqRUDR01unWpvSge6zqW9nIXfrvPs5d4o7QoMPFuAfgwP-V7AgyG5Q6cmt4Uon41N1vkaYup64_U7PzxtMcGTnaq-dW43eUys8xSGwbQ-74v_6KxwPvw-h6PT-GQ5w2cYnyVhTlwZ2a6_A0fUAU8a1jwWDDh1xoGXhie49bUflNBw5_d6BWsVwNBAnSdqXLi-fxPJgcGtZC50CrWBoDRcdprkuWh42pTn3bBHy6lqdAsSu9-g=w436-h925-no?authuser=0 alt="infographic on why 5G is most likely harmless">
                 
                     <div id="values">
