--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               
                 <div id="isyu">
                         <h2>Kontemporaryong Isyu</h2>
-                            <img class=capannoripic src=https://upload.wikimedia.org/wikipedia/commons/9/9f/Castelvecchio_Alto_-_panoramio.jpg>
+                            <img class="capannoripic" src=https://upload.wikimedia.org/wikipedia/commons/9/9f/Castelvecchio_Alto_-_panoramio.jpg>
                                 <p> Ang Pilipinas ay pangatlo sa pinakamalaking kontributor ng mga plastik na basura sa karagatan sa buong mundo. Isang dahilan dito ay ang kahirapang makahanap ng paraan ng tamang pagtatapon ng basura ng mga nakatira sa bukid at ang mga squatter. Pero marami pa rin pwedeng gawin, lalo na ang mga mas may-kaya, para magkaroon ng malasakit sa kapaligiran na hindi madalas nakikita. </p>
                                 <p>Upang lahat ay makapagtapon ng tama ng basura nila, kailangan magbigay ang gobyerno ng programa sa lahat ng mamamayan, ng tamang paraan ng pagtatapon ng basura. Kailangan sila gumawa ng paraan na kahit yung squatter at  mga nakatira sa bukid ay maitapon ng tama ang basura nila. Kapag walang tamang paraan ang mga tao, lalo na ang mga squatter, sa pagtatapon ng basura , itatapon na lang nila kung saan saan ito at patuloy na lalala ang polusyon ng basura sa ating kapaligiran. </p>
                                 <p>Pangalawa, kailangan nilang magtayo ng separated waste stream collection ng nabubulok, narerecycle, at lahat ng ibang basura. pwede din silang maghikayat sa mga tao para i-segregate ang mga basura nila sa pamamagitang ng pagpapatupad ng pay-as-you-throw na programa. </p>
