--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             #container {
                 width: 90%;
                 margin: auto;
+                background: grey;
+                border: 2px silver;
             }
             #poem {
                 width: 40%;
