--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
             #container {
                 width: 90%;
                 margin: auto;
-                background: grey;
-                border: 2px silver;
+                background: silver;
+                border: 4px black;
+                padding: 3px
             }
             #poem {
                 width: 40%;
