--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             #container {
                 width: 90%;
                 margin: auto;
-                background: silver;
+                background: #f8f8ff;
                 border: 4px black;
                 padding: 3px
             }
