--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="utf-8">
         <title>2st Quarter portfolio</title>
         <style>
+            body {
+            background: #f8f8ff;
+            }
             #container {
                 width: 90%;
                 margin: auto;
-                background: #f8f8ff;
+
                 border: 4px black;
                 padding: 3px
             }
