--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 text-align: center
             }
             #values {
-             
+             border: 6px #7575FF;
                 }
             #science {
                 width: 300px;
