--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 text-align: center
             }
             #values {
-             border: 30px #7575FF;
+             width: 400px
                 }
             #science {
                 width: 300px;
