--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                 text-align: center
             }
             #values {
-             width: 600px
+             width: 80%
                 }
             #science {
                 width: 300px;
             }
              #isyu {
+                 width: 80%
             }
              #isyu p {
                 text-indent: 2em;
